Fix de la version tablette
La div aside "les plus populaires" passent avant la div article "hebergement"
les blocs sont alignés par 3 au lieu de 2.

--- a/css/styles.css
+++ b/css/styles.css
@@ -591,25 +591,57 @@ footer div ul h2{
     }
     
     #hebergements {
-        width:648px;
-        display:block;
+        width:768px;
+        display:flex;
+        flex-direction: column-reverse;
         height:auto;
     }
     
     article {
         margin-right:0px;
-        width:648px;
-        margin-bottom:50px;
+        width:768px;
+        
+        padding:10px 10px;
     }
     #hebergementcontent {
         justify-content:space-around;
         margin-top:50px;
-
+    }
+    
+    #afficher {
+        margin-left:40px;
     }
     aside {
-        width: 668px;
-        padding:40px;
+        width: 768px;
+        padding:0px;
+        margin-bottom:50px;
+        padding:10px 10px;
+        
     }
+    #popcontent {
+        display:flex;
+        justify-content: space-around;
+    }
+    .pophotel {
+        width:230px;
+        height:145px
+    }
+    .pophotelname {
+        width:200px;
+        padding:0;
+        height:145px;
+        line-height: 14px; 
+        padding-left:5px;
+        justify-content: space-between;
+        margin:0;
+        
+        
+        
+    }
+    .hotelname div h2 {
+        line-height:14px
+    }
+    
     #title {
         margin-bottom:30px;
         
@@ -624,14 +656,15 @@ footer div ul h2{
         align-items: center;
     }
     #activités {
-        width:648px;
-        padding-left:50px;
+        width:678px;
+        padding-left:10px;
         margin-top:100px;
     }
     
     #activité {
-        width:648px;
+        width:678px;
         height:930px;
+        padding-left: 75px;
         grid-template-columns: 1fr 1fr;
         grid-template-rows:1fr repeat(27,1fr) 
         }
